[workspace]
resolver = "2"
members = [
    "leet-2009",
    "leet-2895",
    "leet-0004",
    "leet-0229",
    "leet-0316",
    "leet-0338",
    "leet-0343",
    "leet-0389",
    "leet-0392",
    "leet-0456",
    "leet-0557",
    "leet-0706",
    "leet-0880",
    "leet-0896",
    "leet-0905",
    "leet-1512",
    "leet-2405",
    "leet-2855",
    "leet-2864",
    "leet-2894",
]

