[workspace]
resolver = "2"
members = [
"leet-1160",
"leet-1662",
"leet-0191",
"leet-1877",
"leet-1980",
"leet-1846",
"leet-1759",
"leet-2849",
"leet-2923",
"leet-1535",
"leet-2913",
"leet-1120",
"leet-2909",
"leet-2908",
"leet-0844",
"leet-1361",
"leet-0119",
"leet-2903",
"leet-2843",
"leet-1269",
  "leet-0004",
  "leet-0229",
  "leet-0316",
  "leet-0338",
  "leet-0343",
  "leet-0389",
  "leet-0392",
  "leet-0456",
  "leet-0557",
  "leet-0706",
  "leet-0880",
  "leet-0896",
  "leet-0905",
  "leet-1512",
  "leet-2009",
  "leet-2405",
  "leet-2855",
  "leet-2864",
  "leet-2894",
  "leet-2895",
  "leet-2896",
]

